--- a/src/Anezi/Bundle/FontAwesomeBundle/Resources/translations/messages.en.yml
+++ b/src/Anezi/Bundle/FontAwesomeBundle/Resources/translations/messages.en.yml
@@ -2,12 +2,12 @@ fontawesomebundle_title: FontAwesome Bundle for Symfony
 fontawesomebundle_description: >
         This bundle lets you easily use them in your Symfony projects.
 
-library:
+fontawesome_library:
     description: >
         %name% gives you scalable vector icons that can instantly be customized — size,
         color, drop shadow, and anything that can be done with the power of CSS.
 
-docs:
+fontawesome_docs:
     installation:
         title: Installation
         systemRequirements:
